--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,13 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
+    # IMPORTANT
+    # To add files located in subdirectories, create an entry per directory.
+    # https://docs.flutter.dev/development/ui/assets-and-images
     - assets/
-  
+    - assets/images/
+    - assets/images/icons/
+
   fonts:
   - family: FuturaBook    
     fonts:
