--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.1
   firebase_database: ^10.0.9
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
