--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flame: 1.7.0
+  audioplayers: 4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
